# thinkbox-stoke

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE.txt  README.md  conanfile.py  stdafx.cpp  stdafx.h
include/ember/: advection.hpp  async_field_task.hpp  concatenated_field.hpp  constant_field.hpp  data_types.hpp  ember_compiler.hpp  fft_solver.hpp  field3d.hpp  grid.hpp  levelset.hpp  openvdb.hpp  particles.hpp  simulation.hpp  staggered_grid.hpp  transformed_field.hpp
include/ember/nodes/: AdvectionNode.hpp  CurlNode.hpp  DivergenceNode.hpp  GradientNode.hpp  GridCacheNode.hpp  LevelSet.hpp  ParticleSplatNode.hpp  PressureSolveNode.hpp
include/stoke/: additive_velocity_field.hpp  advector_interface.hpp  data_types.hpp  dummy_advector.hpp  dummy_field.hpp  dummy_particle_generator.hpp  dummy_particle_set.hpp  duplicating_particle_istream.hpp  field.hpp  field_interface.hpp  id_generator.hpp  id_generator_interface.hpp  particle_generator.hpp  particle_generator_interface.hpp  particle_set.hpp  particle_set_interface.hpp  particle_set_istream.hpp  particle_set_serializer.hpp  particle_splat_field.hpp  rk2_advector.hpp  rk3_advector.hpp  rk4_advector.hpp  time_interface.hpp
src/: additive_velocity_field.cpp  advection.cpp  dummy_particle_set.cpp  ember_compiler.cpp  fft_solver.cpp  field.cpp  field3d.cpp  grid.cpp  id_generator.cpp  openvdb.cpp  particle_generator.cpp  particle_set.cpp  particle_set_istream.cpp  particle_set_serializer.cpp  particle_splat_field.cpp  particles.cpp  simulation.cpp  staggered_grid.cpp
src/nodes/: AdvectionNode.cpp  CurlNode.cpp  DivergenceNode.cpp  GradientNode.cpp  GridCacheNode.cpp  LevelSet.cpp  ParticleSplatNode.cpp  PressureSolveNode.cpp
